--- a/JobScheduling/pom.xml
+++ b/JobScheduling/pom.xml
@@ -34,5 +34,10 @@
     	<artifactId>opl</artifactId>
     	<version>12.6.0</version>
     </dependency>
+  	    <dependency>
+  	    	<groupId>edu.ohiou.mfgresearch</groupId>
+  	    	<artifactId>LambdaUtil</artifactId>
+  	    	<version>0.0.1-SNAPSHOT</version>
+  	    </dependency>
   </dependencies>
 </project>
